--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <div id="btn_group" style="display: block;">
                 <a class="btn btn-primary btn-lg" onclick="readyBtn()">开始游戏</a>
                 <br/><br/>
+                <a class="btn btn-primary btn-lg" href="https://sioskejehruks.github.io/BigKano/">&nbsp;是新游戏哦&nbsp;</a>
+                <br> <br>
 
                 <div class="dropdown">
                     <a class="btn btn-secondary btn-lg" href="javascript: void(0);" role="button" id="mode" data-bs-toggle="dropdown" aria-expanded="false">普通模式</a>
