--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div style="padding:5%;margin-top: 200px;background-color: rgba(125, 181, 216, 0.3);">
         <div id="GameScoreLayer-text"></div>
         <div id="GameScoreLayer-CPS" style="margin:5px 0;"></div>
-        <div id="GameScoreLayer-score" style="margin:5px 0;">得分</div>
+        <div id="GameScoreLayer-score" style="margin:5px 0;">得粪</div>
         <div id="GameScoreLayer-bast" style="margin:5px 0">最佳</div>
         <button type="button" class="btn btn-secondary btn-lg" id="replay" onclick="replayBtn()">重开</button>
         <button type="button" class="btn btn-secondary btn-lg" onclick="window.location.reload()">主页</button>
@@ -35,12 +35,12 @@
         <div style="margin:0 8% 0 9%;">
             <div style="font-size:2.6em; color:#FEF002;">新概念音游</div><br />
             <div id="desc" style="display: block;font-size:2.2em; color:#fff; line-height:1.5em;">
-                从最底下的开始<br />
-                看你能得多少分<br />
+                co↓co↓<br />
+                看你能吃多少个王子睿<br />
             </div>
             <br />
             <div id="btn_group" style="display: block;">
-                <a class="btn btn-primary btn-lg" onclick="readyBtn()">开始游戏</a>
+                <a class="btn btn-primary btn-lg" onclick="readyBtn()">大恰特恰</a>
                 <br/><br/>
                 <a class="btn btn-primary btn-lg" href="https://sioskejehruks.github.io/BigKano/">&nbsp;是新游戏哦&nbsp;</a>
                 <br> <br>
@@ -48,14 +48,14 @@
                 <div class="dropdown">
                     <a class="btn btn-secondary btn-lg" href="javascript: void(0);" role="button" id="mode" data-bs-toggle="dropdown" aria-expanded="false">普通模式</a>
                     <ul class="dropdown-menu" aria-labelledby="mode">
-                        <li><a class="dropdown-item" onclick="changeMode(MODE_NORMAL)">普通模式</a></li>
-                        <li><a class="dropdown-item" onclick="changeMode(MODE_ENDLESS)">无尽模式</a></li>
-                        <li><a class="dropdown-item" onclick="changeMode(MODE_PRACTICE)">练习模式</a></li>
+                        <li><a class="dropdown-item" onclick="changeMode(MODE_NORMAL)">容易呛到</a></li>
+                        <li><a class="dropdown-item" onclick="changeMode(MODE_ENDLESS)">慢慢恰</a></li>
+                        <li><a class="dropdown-item" onclick="changeMode(MODE_PRACTICE)">吃屎去吧</a></li>
                     </ul>
                 </div>
 
                 <br/>
-                <a class="btn btn-secondary btn-lg" onclick="show_setting()">游戏设置</a>
+                <a class="btn btn-secondary btn-lg" onclick="show_setting()">游戏射置</a>
             </div>
             <div id="setting" style="display: none;">
                 <div class="container mb-3">
